--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<link rel="stylesheet" href="mediaqueries.css" />
 	</head>
 	<body>
-    <nav id="desktop-nav">
+    	<nav id="desktop-nav">
 			<div class="logo">Jack Darlington</div>
 			<div>
 				<ul class="nav-links">
@@ -42,8 +42,8 @@
 			<div class="section__text">
 				<p class="section__text__p1">Hello, I'm</p>
 				<h1 class="title">Jack Darlington</h1>
-				<p class="section__text__p2">Rising Sophomore in Computer Science</p>
-				<p class="section__text__p3">at Purdue University West Lafayette</p>
+				<p class="section__text__p2">Sophomore in Computer Science</p>
+				<p class="section__text__p3">at Purdue University</p>
 				<div class="btn-container">
 					<button class="btn btn-color-2" 
 						onclick="window.open('./assets/resume-example.pdf')">
@@ -71,7 +71,7 @@
 			</div>
 		</section>
 		<section id="about">
-			<p class="section__text__p1">Get To Know More</p>
+			<p class="section__text__p1">Learn More</p>
 			<h1 class="title">About Me</h1>
 			<div class="section-container">
 				<div class="section__pic-container">
@@ -90,7 +90,7 @@
 								class="icon"
 							/>
 							<h3>Experience</h3>
-							<p>2+ Years <br />Frontend Development</p>
+							<p>4 Years<br/>Coding Experience</p>
 						</div>
 						<div class="details-container">
 							<img 
@@ -99,18 +99,14 @@
 								class="icon"
 							/>
 							<h3>Education</h3>
-							<p>B.S. Bachelors Degree</p>
+							<p>Purdue University<br/>Bachelor of Science<br/>Expected May 2026</p>
 						</div>
 					</div>
 					<div class="text-container">
 						<p>
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-							Eveniet odio minima ratione, fuga, similique totam accusantium 
-							dicta necessitatibus corporis hic, esse perspiciatis molestias. 
-							Nemo optio est magni dignissimos quia amet adipisci 
-							molestias maiores at. Velit, itaque fugit molestias adipisci 
-							laudantium id animi eligendi ratione quod esse eaque nesciunt 
-							ipsa doloremque!
+							I am a Sophomore studying Computer Science at Purdue University West Lafayette.
+							I am interested in Frontend Development in my professional future. 
+							I am a member of the Honors College at Purdue and I also work at the student gym.
 						</p>
 					</div>
 				</div>
@@ -128,30 +124,31 @@
 			<div class="experience-details-container">
 				<div class="about-containers">
 					<div class="details-container">
-						<h2 class="experience-sub-title">Frontend Development</h2>
+						<h2 class="experience-sub-title">High School</h2>
 						<div class="article-container">
 							<article>
 								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
+									src="./assets/C++-logo.png" 
+									alt="C++ icon"
 									class="icon"
 								/>
 								<div>
-									<h3>HTML</h3>
-									<p>Experienced</p>
+									<h3>C++</h3>
+									<p>Intermediate</p>
 								</div>
 							</article>
 							<article>
 								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
+									src="./assets/Python-logo.png" 
+									alt="Python icon"
 									class="icon"
 								/>
 								<div>
-									<h3>CSS</h3>
-									<p>Experienced</p>
+									<h3>Python</h3>
+									<p>Basic</p>
 								</div>
 							</article>
+							<!--
 							<article>
 								<img 
 									src="./assets/checkmark.png" 
@@ -196,53 +193,65 @@
 									<p>Intermediate</p>
 								</div>
 							</article>
+							-->
 						</div>
 					</div>
 					<div class="details-container">
-						<h2 class="experience-sub-title">Backend Development</h2>
+						<h2 class="experience-sub-title">College</h2>
 						<div class="article-container">
 							<article>
 								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
+									src="./assets/Java-logo.png" 
+									alt="Java icon"
 									class="icon"
 								/>
 								<div>
-									<h3>ProgreSQL</h3>
+									<h3>Java</h3>
+									<p>Advanced</p>
+								</div>
+							</article>
+							<article>
+								<img 
+									src="./assets/C-logo.png" 
+									alt="C icon"
+									class="icon"
+								/>
+								<div>
+									<h3>C</h3>
+									<p>Advanced</p>
+								</div>
+							</article>
+							<article>
+								<img 
+									src="./assets/HTML-logo.png" 
+									alt="HTML icon"
+									class="icon"
+								/>
+								<div>
+									<h3>HTML</h3>
 									<p>Basic</p>
 								</div>
 							</article>
 							<article>
 								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
+									src="./assets/CSS-logo.png" 
+									alt="CSS icon"
 									class="icon"
 								/>
 								<div>
-									<h3>Node JS</h3>
-									<p>Experienced</p>
+									<h3>CSS</h3>
+									<p>Basic</p>
 								</div>
 							</article>
 							<article>
 								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
+									src="./assets/SwiftUI-logo.png" 
+									alt="SwiftUI icon"
 									class="icon"
 								/>
 								<div>
-									<h3>Express JS</h3>
-									<p>Intermediate</p>
-								</div>
-							</article>
-							<article>
-								<img 
-									src="./assets/checkmark.png" 
-									alt="Experience icon"
-									class="icon"
-								/>
-								<div>
-									<h3>Git</h3>
-									<p>Experienced</p>
+									<h3>SwiftUI</h3>
+									<p>Basic</p>
 								</div>
 							</article>
 						</div>
