--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 						onclick="window.open('./assets/resume-example.pdf')">
 						Dowload CV
 					</button>
-					<button class="btn btn-color-1" 
+					<button 
+						class="btn btn-color-1" 
 						onclick="location.href='./#contact'">
 						Contact Info
 					</button>
