--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<ul class="nav-links">
 					<li><a href="#about">About</a></li>
 					<li><a href="#experience">Experience</a></li>
-					<li><a href="#projects">Projects</a></li>
+					<!--<li><a href="#projects">Projects</a></li>-->
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
@@ -30,7 +30,7 @@
 				<div class="menu-links">
 					<li><a href="#about" onclick="toggleMenu()">About</a></li>
 					<li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-					<li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+					<!--<li><a href="#projects" onclick="toggleMenu()">Projects</a></li>-->
 					<li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 				<p class="section__text__p3">at Purdue University</p>
 				<div class="btn-container">
 					<button class="btn btn-color-2" 
-						onclick="window.open('./assets/resume-example.pdf')">
+						onclick="window.open('./assets/resume.pdf')">
 						Dowload CV
 					</button>
 					<button 
@@ -105,9 +105,11 @@
 					</div>
 					<div class="text-container">
 						<p>
-							I am a Sophomore studying Computer Science at Purdue University West Lafayette.
-							I am interested in Frontend Development in my professional future. 
-							I am a member of the Honors College at Purdue and I also work at the student gym.
+							My name is Jack Darlington and I'm from Crown Point, Indiana. 
+							I'm a sophomore in computer science at Purdue University and I'm interested in frontend development in my professional future.
+							I'm a member of the Purdue Honors College and I work at the France A. Córdova Recreational Sports Center. 
+							My hobbies include running, most recently a half-marathon, weightlifting, cooking, and watching football.
+							I am excited to learn about internship opportunities for the Summer of 2024!
 						</p>
 					</div>
 				</div>
@@ -263,10 +265,10 @@
 				src="./assets/arrow.png" 
 				alt="Arrow icon" 
 				class="icon arrow"
-				onclick="location.href='./#projects'"
+				onclick="location.href='./#contact'"
 			/>
 		</section>
-		<section id="projects">
+		<!--<section id="projects">
 			<p class="section__text__p1">Browse My Recent</p>
 			<h1 class="title">Projects</h1>
 			<div class="experience-details-container">
@@ -344,7 +346,7 @@
 				class="icon arrow"
 				onclick="location.href='./#contact'"
 			/>
-		</section>
+		</section>-->
 		<section id="contact">
 			<p class="section__text__p1">Get In Touch</p>
 			<h1 class="title">Contact Me</h1>
@@ -373,7 +375,7 @@
 					<ul class="nav-links">
 						<li><a href="#about">About</a></li>
 						<li><a href="#experience">Experience</a></li>
-						<li><a href="#projects">Projects</a></li>
+						<!--<li><a href="#projects">Projects</a></li>-->
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
