--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				onclick="location.href='./#contact'"
 			/>
 		</section>
-		<!--<section id="projects">
+		<section id="projects">
 			<p class="section__text__p1">Browse My Recent</p>
 			<h1 class="title">Projects</h1>
 			<div class="experience-details-container">
@@ -270,8 +270,8 @@
 							class="project-img"
 						/>
 					</div>
-					<h2 class="experience-sub-title project-title">Project One</h2>
-					<div class="btn-container">
+					<h2 class="experience-sub-title project-title">Retail Calendar - CS 18000</h2>
+					<!--<div class="btn-container">
 						<button 
 							class="btn btn-color-2 project-btn" 
 							onclick="location.href='https://github.com'">
@@ -282,9 +282,9 @@
 							onclick="location.href='https://youtube.com'">
 							Live Demo
 						</button>
-					</div>
+					</div>-->
 				</div>
-				<div class="details-container color-container">
+				<!--<div class="details-container color-container">
 					<div class="article-container">
 						<img 
 							src="./assets/project-2.png" 
@@ -327,7 +327,7 @@
 							Live Demo
 						</button>
 					</div>
-				</div>
+				</div>-->
 			</div> </div>
 			<img 
 				src="./assets/arrow.png" 
@@ -335,7 +335,7 @@
 				class="icon arrow"
 				onclick="location.href='./#contact'"
 			/>
-		</section>-->
+		</section>
 		<section id="contact">
 			<p class="section__text__p1">Get In Touch</p>
 			<h1 class="title">Contact Me</h1>
@@ -364,7 +364,7 @@
 					<ul class="nav-links">
 						<li><a href="#about">About</a></li>
 						<li><a href="#experience">Experience</a></li>
-						<!--<li><a href="#projects">Projects</a></li>-->
+						<li><a href="#projects">Projects</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
