--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 						/>
 					</div>
 					<h2 class="experience-sub-title project-title">Retail Calendar - CS 18000</h2>
-					<!--<div class="btn-container">
+					<div class="btn-container">
 						<button 
 							class="btn btn-color-2 project-btn" 
 							onclick="location.href='https://github.com'">
@@ -282,7 +282,7 @@
 							onclick="location.href='https://youtube.com'">
 							Live Demo
 						</button>
-					</div>-->
+					</div>
 				</div>
 				<!--<div class="details-container color-container">
 					<div class="article-container">
