--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 						</button>
 					</div>
 				</div>
-				<!--<div class="details-container color-container">
+				<div class="details-container color-container">
 					<div class="article-container">
 						<img 
 							src="./assets/project-2.png" 
@@ -327,7 +327,7 @@
 							Live Demo
 						</button>
 					</div>
-				</div>-->
+				</div>
 			</div> </div>
 			<img 
 				src="./assets/arrow.png" 
