--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
 						/>
 					</div>
 					<h2 class="experience-sub-title project-title">Retail Calendar - CS 18000</h2>
-					<div class="btn-container">
+					<h3 class="experience-sub-title project-sub">Collaborated with a group of 4 students to design an application using Java to store and manage appointments for a user.
+						Integrated a user interface, allowing both retailers and consumers to schedule appointments avoiding overlapping times, featuring concurrency between multiple users, and client-server communication to store data. 
+						</h2>
+					<!--<div class="btn-container">
 						<button 
 							class="btn btn-color-2 project-btn" 
 							onclick="location.href='https://github.com'">
@@ -282,9 +285,9 @@
 							onclick="location.href='https://youtube.com'">
 							Live Demo
 						</button>
-					</div>
+					</div>-->
 				</div>
-				<div class="details-container color-container">
+				<!--<div class="details-container color-container">
 					<div class="article-container">
 						<img 
 							src="./assets/project-2.png" 
@@ -327,7 +330,7 @@
 							Live Demo
 						</button>
 					</div>
-				</div>
+				</div> -->
 			</div> </div>
 			<img 
 				src="./assets/arrow.png" 
